2015-02-10  Karl Berry  <karl@gnu.org>

	* tp/t/test_utils.pl (%outfile_preamble) <html_text>: update css.

2015-02-10  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Report.pm (Module documentation section): Minor 
	tweaks to grammar.

2015-02-09  Karl Berry  <karl@gnu.org>

	* doc/refcard/txicmdcheck: check @findex entries in texinfo.texi too.
	* doc/texinfo.texi: add some missing entries.

	* doc/texinfo.texi (Hardcopy): update whole chapter.
	(Formatting Partial Documents, Details of @t{texindex}):
	new nodes, mostly to mention the temporary need for
	\usebracesinindexestrue.

2015-02-08  Karl Berry  <karl@gnu.org>

	* tp/Texinfo/Convert/HTML.pm (_convert_U_command): new fn for @U.
	$default_commands_conversion{'U'}: call it.
	* tp/Texinfo/Convert/Plaintext.pm (_convert): handle @U, writing
	binary if output is UTF-8, else just the ASCII string U+xxxx.
	* tp/Texinfo/Convert/Docbook.pm (_convert): handle @U.
	* tp/Texinfo/Common.pm (brace_commands) <one_arg_command>: add U.
	* tp/Texinfo/Parser.pm (simple_text_commands): add U.
	(debug_hash, debug_list): new fns.
	* util/texinfo.dtd (U): new ELEMENT.

	* tp/Texinfo/Convert/Converter.pm: move doc about
	output_internal_links being only for HTML to here.

2015-02-08  Karl Berry  <karl@gnu.org>

	* tp/Texinfo/Convert/DocBook.pm: alphabetize, format, debugging;
	no functional changes intended.

2015-02-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (incremental_search): For searches uses regex, 
	keep on searching for a match for a longer search string even if 
	a shorter search string was not found.  Report from Werner 
	Lemberg.

	* info/session.c (window_set_state, window_get_state): Save 
	point of window so we know where to position cursor when we go 
	back to a failing search.  Call display_update_one_window when 
	going back to a failing search.

2015-02-06  Karl Berry  <karl@gnu.org>

	* doc/texinfo.texi: let's mark the info quote proposal explicitly